# Raytracing

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.ps1  buildAndRunLog.ps1  raytracing.vcxproj  raytracing.vcxproj.filters
dependencies/tucano/tucano/: camera.hpp  shader.hpp
dependencies/tucano/tucano/utils/: ppmIO.hpp
resources/models/: Excalibur.mtl  Excalibur2.mtl  Excalibur3.mtl  Excalibur4.mtl  NthTest.mtl  bunny.mtl  cube.mtl  cube2.mtl  glass.mtl  reflect_test.mtl  shadowmodel.mtl  toy.mtl  toy_on_plane.mtl
src/: boundingBox.h  defs.h  flyscene.cpp  flyscene.hpp  main.cpp
